Integrate MixPanel mobile app analytics library within the app

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1083,7 +1083,7 @@ div.taskContainer > div.task > .summary {
 }
 
 .reqColor {
-    background-color: #B8E986;;;
+    background-color: #B8E986;
 }
 
 #tabcontenttextbox {
