--- a/www/css/main.css
+++ b/www/css/main.css
@@ -160,11 +160,10 @@ body {
     overflow-y: scroll;
     left: 0.25em;
 }
-/*Shruthi*/
-/*.pageContainer > .exceptionRow {
-    -webkit-overflow-scrolling: touch;
-}*/
 
+#exceptionListContainer{
+    -webkit-overflow-scrolling: touch;
+}
 .zeroBottom {
     bottom: 0 !important;
 }
@@ -1413,7 +1412,7 @@ iframe {
     background-color: #ffffff;
     margin: 0 0 0.5em 0;
     padding: 0.5em;
-    /*-webkit-transform: translate3d(0, 0, 0);  Shruthi*/
+    -webkit-transform: translate3d(0, 0, 0); 
 }
 
 .exceptionsContainer {
